# drone-swarm-sim

./: .gitignore  LICENSE  README.md  analyse_lite_results.py  bridge.yaml  ground_truth_logger_lite.py  interleaved_attacker.py  lio_mavros_bridge.py  requirements.txt  run_lite_sweep.sh  swarm_lite_sim.py  sybil_attacker_lite.py
config/: params.yaml
configs/: bridge.yaml  bridge2.yaml  iris_warehouse.sdf  iris_with_standoffs_model.sdf  mavros_drone1.yaml  mavros_drone2.yaml
data/: imu_injection_v2_metrics_drone1_20260425_115014.csv  imu_injection_v2_metrics_drone1_20260425_115902.csv  imu_injection_v2_metrics_drone1_20260425_122036.csv  layer1_mission_results.csv  scaling_results.csv  scan_sweep_summary.csv
docs/: LAUNCH.md  SETUP.md  TROUBLESHOOTING.md  docs_ATTACKS.md
lio_sam_config/: params.yaml  params_drone1.yaml  params_drone2.yaml
lio_sam_patches/: imu_preintegration_dt_guards.patch  mapoptmization_kdtree_check.patch
scaling/: README.md  gt_logger_lite.py  interleaved_attacker_lite.py  run_scaling.sh  sybil_attacker_lite.py  virtual_drone_lite.py
scripts/: preflight_check.sh  (+2 more)
swarm_mission/: package.xml  setup.cfg  setup.py
swarm_mission/config/: waypoints.yaml
swarm_mission/swarm_mission/: clock_filter.py  ground_truth_logger.py  imu_injector.py  imu_injector_v2.py  lidar_deskew_relay.py  lidar_deskew_shim.py  lidar_dos.py  lidar_manipulator.py  mavros_cmd_injector.py  network_attacker.py  plot_rotation_sweep.py  pointcloud_injector.py  qos_poisoner.py  setpoint_hijacker.py  slam_failure_logger.py  vision_pose_spoofer.py  waypoint_navigator.py
