<?xml version="1.0"?>
<package format="3">
  <name>swarm_mission</name>
  <version>0.1.0</version>
  <description>Byzantine fault-tolerant drone swarm mission for GPS-denied warehouse inspection</description>
  <maintainer email="patrik.mohai@gmail.com">Patrik Mohai</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
